--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Archinime (optimizado)</title>
+  <title>Archinime</title>
   <link rel="icon" href="Logo_Archinime.png" type="image/png">
   <link rel="preload" as="image" href="videoframe.jpg">
 
