--- a/anime-detail.html
+++ b/anime-detail.html
@@ -236,6 +236,7 @@
   <audio id="oyasumi-ost" loop><source src="https://www.dropbox.com/scl/fi/z1kusweadab5q7kcb81qp/Oyasumi-Sekusu-Episode-4-Ending.mp3?rlkey=zoz6n8cgbfy3ciys39vaqdrrv&st=8nj6o0vy&raw=1" type="audio/mpeg"></audio>
   <audio id="rym-ost" loop><source src="rym.mp3" type="audio/mpeg"></audio>
   <audio id="akujiki-ost" loop><source src="akujiki.mp3" type="audio/mpeg"></audio>
+  <audio id="saigonihitotsu-ost" loop><source src="saigonihitotsu.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2838,6 +2839,15 @@
           },
           {
             num: 3,
+	    name: "Película 1",
+            cover: "spyxfamilypeli.jpg",
+            eps: [
+              { title: "Spy × Family La Película - Code: White"},
+            ]
+          },
+          {
+            num: 4,
+	    name: "Temporada 3",
             cover: "https://www.dropbox.com/scl/fi/mtki74k5zzzywfdegb4ir/dfffffg.jpg?rlkey=g563wasphqjhhyep83qnq548r&st=9uw7j6kq&raw=1",
             eps: [
               { title: "Spy × Family T3 Cap 1"},
@@ -3444,6 +3454,34 @@
           }
         ]
       },
+      60: {
+        title: "Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka",
+        desc: "Scarlet ya ha soportado bastante los abusos de su prometido. El segundo príncipe Kyle no solo es arrogante y vulgar, sino que además rompe su compromiso con ella en pleno baile. Y, por si fuera poco, la acusa de un crimen que jamás cometió. Enfadada por la traición, Scarlet desata toda su furia y la propina al príncipe y a sus nobles una paliza que nunca olvidarán.",
+        cover: "saigo ni hitotsu.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "ca08afa9a48d.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          }
+        ]
+      },
+
+
 
 
 
@@ -3653,6 +3691,7 @@
         57: ['oyasumi-ost'],
         58: ['rym-ost'],
         59: ['akujiki-ost'],
+        60: ['saigonihitotsu-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
