--- a/video-player.html
+++ b/video-player.html
@@ -1447,11 +1447,11 @@
       },
       "30": {
         "1": {
-          "1": { link:'https://www.dropbox.com/scl/fi/tlnut3bzb13xfv26bhgcm/Shoujo-Ramune-01-Audio-Latino-1080p-LatinoHentai.mp4?rlkey=8zytsseg2kx0gtne5rk90gtvg&st=50bjf2pi&raw=1', title:'Shoujo Ramune ESPAÑOL T1 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/wlkyg9ywcpcqhvwlc13hp/shoujoramuness-01.mp4?rlkey=82jdrgrl5q2vraljjzm85llt8&st=sjou2cqk&raw=1', title:'Shoujo Ramune SUB T1 Cap 1' },
-          "3": { link:'https://www.dropbox.com/scl/fi/jraramv6b5uwt4rkubr1a/shoujoramuness-02.mp4?rlkey=r0rf6h8rfy0mwkqkzgz14cqx0&st=mdgk1hsp&raw=1', title:'Shoujo Ramune SUB T1 Cap 2' },
-          "4": { link:'https://www.dropbox.com/scl/fi/728kl0dztz3po9x58a1ct/shoujoramuness-03.mp4?rlkey=9dpcv1r2r6vh07m2reom8dfmb&st=6b2f5o2e&raw=1', title:'Shoujo Ramune SUB T1 Cap 3' },
-          "5": { link:'https://www.dropbox.com/scl/fi/n2iaalss7ez17ib1ceolk/shoujoramuness-04.mp4?rlkey=klvlmhftp91dzfodk99s0fz78&st=5b9pc2bn&raw=1', title:'Shoujo Ramune SUB T1 Cap 4' },
+          "1": { link:'https://drive.google.com/file/d/1MHT1yZHIcM90WDy4Kb6NgEyzsxFGpmJ3/preview', link2:'https://www.dropbox.com/scl/fi/tlnut3bzb13xfv26bhgcm/Shoujo-Ramune-01-Audio-Latino-1080p-LatinoHentai.mp4?rlkey=8zytsseg2kx0gtne5rk90gtvg&st=50bjf2pi&raw=1', title:'Shoujo Ramune ESPAÑOL T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1lXOVeXg_2foWKBzfSnn8GOa6EubCNROk/preview', link2:'https://www.dropbox.com/scl/fi/wlkyg9ywcpcqhvwlc13hp/shoujoramuness-01.mp4?rlkey=82jdrgrl5q2vraljjzm85llt8&st=sjou2cqk&raw=1', title:'Shoujo Ramune SUB T1 Cap 1' },
+          "3": { link:'https://drive.google.com/file/d/17V_QYmym1M2lfESWgGnb_VLND3Gtn4-P/preview', link2:'https://www.dropbox.com/scl/fi/jraramv6b5uwt4rkubr1a/shoujoramuness-02.mp4?rlkey=r0rf6h8rfy0mwkqkzgz14cqx0&st=mdgk1hsp&raw=1', title:'Shoujo Ramune SUB T1 Cap 2' },
+          "4": { link:'https://drive.google.com/file/d/188T2-RuivfFi-oXcM8vOBv-1o_H-Oe-b/preview', link2:'https://www.dropbox.com/scl/fi/728kl0dztz3po9x58a1ct/shoujoramuness-03.mp4?rlkey=9dpcv1r2r6vh07m2reom8dfmb&st=6b2f5o2e&raw=1', title:'Shoujo Ramune SUB T1 Cap 3' },
+          "5": { link:'https://drive.google.com/file/d/1URAydZR1W-MYIJrU-Ou0p__1jqTMEZB8/preview', link2:'https://www.dropbox.com/scl/fi/n2iaalss7ez17ib1ceolk/shoujoramuness-04.mp4?rlkey=klvlmhftp91dzfodk99s0fz78&st=5b9pc2bn&raw=1', title:'Shoujo Ramune SUB T1 Cap 4' },
         }
       },
       "31": {
@@ -1635,8 +1635,8 @@
       },
       "37": {
         "1": {
-          "1": { link:'https://www.dropbox.com/scl/fi/wiu9vhmz4j83rhz6927lj/Shinsei-Kourin-Dacryon-Luna-Cap-1-Sub-Espa-ol.mp4?rlkey=cijr65vftkrtexv3b21tjdbzz&st=5sit9huw&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/26tc29rakiektix54c250/Shinsei-Kourin-Dacryon-Luna-Cap-2-Sub-Espa-ol.mp4?rlkey=jkn6gwjel0000ltimnfmxujok&st=60nwhwo9&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 2' },
+          "1": { link:'https://drive.google.com/file/d/1xTVuhcCdgndmfOt8MTVDaVpEm7SNMHOp/preview', link2:'https://www.dropbox.com/scl/fi/wiu9vhmz4j83rhz6927lj/Shinsei-Kourin-Dacryon-Luna-Cap-1-Sub-Espa-ol.mp4?rlkey=cijr65vftkrtexv3b21tjdbzz&st=5sit9huw&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1No2yG6HbHKq0qAFQqLBmnY31Rm-eAKLt/preview', link2:'https://www.dropbox.com/scl/fi/26tc29rakiektix54c250/Shinsei-Kourin-Dacryon-Luna-Cap-2-Sub-Espa-ol.mp4?rlkey=jkn6gwjel0000ltimnfmxujok&st=60nwhwo9&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 2' },
         }
       },
       "38": {
@@ -1890,18 +1890,15 @@
           "12": { link:'https://drive.google.com/file/d/1o8tMz37ZozmHcQ4Bc0DQFltAunwA2KaH/preview', link2:'https://www.dropbox.com/scl/fi/f8gszus5q8xxtqib0q23k/Tondemo-Skill-de-Isekai-Hourou-Meshi-T1-Cap-12.mp4?rlkey=vwn3zrkhtm5p827b8ppm083lb&st=vtr5arii&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T1 Cap 12' },
         },
         "2": {
-          "1": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 1' },
-          "2": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 2' },
-          "3": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 3' },
-          "4": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 4' },
-          "5": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 5' },
-          "6": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 6' },
-          "7": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 7' },
-          "8": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 8' },
-          "9": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 9' },
-          "10": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 10' },
-          "11": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 11' },
-          "12": { link:'&raw=1', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 12' },
+          "1": { link:'https://drive.google.com/file/d/13p62SAsPVrqdMxQN0h4KRAFQo-SlAvKA/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1KHtj4Petg8_kCnVpx42AEiOaNSFKb9aZ/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1_cgLB9waxS_DZyMmmF-d5aBn4o7TPsRF/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1tZFLQPLyou1bSyINdAqFYeDK8lBqpZgr/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1GGh6uepZ8GWxo6xq2Xrru4vormzDkaVO/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/13sDRuJxXqWbp_DoGECmF2w_sQbLDCB8w/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1GslHg_1MVbqMKi9LEbnLqMbZIeW5Qtt-/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1qLOBU3QJgWAidGhhXchDtZEkWtd6mBL1/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1Wj5IA3QpanA9OaV9MaCx8-F6S9mzdHC5/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 9' },
         }
       },
       "46": {
@@ -2037,6 +2034,9 @@
           "12": { link: 'https://drive.google.com/file/d/19FHp7W5DYTROeokW_G2d3s6DK4wSKvd2/preview', link2: 'https://www.dropbox.com/scl/fi/lgcv6ejtra3kzfbzza5j6/Spy-Family-T2-Cap-12.mp4?rlkey=ey6ckbsx5u3z6ej0j9swa6zvv&st=imdcuspv&raw=1', title:'Spy × Family T2 Cap 12' },
         },
         "3": {
+          "1": { link: 'https://drive.google.com/file/d/1luj7UDv7JHC9GRjGsYwQXr1n-2reNMUa/preview', title:'Spy × Family La Película - Code: White' },
+        },
+        "4": {
           "1": { link: 'https://drive.google.com/file/d/1MdTaQKCtmuyirNYx_5WXJHKGw9FKgTXK/preview', link2: 'https://www.dropbox.com/scl/fi/5lrn9vci8uartilnyx1uy/Spy-Family-T3-Cap-1.mp4?rlkey=tk1rfcehc1zxl5cg9egps1wij&st=h7fax0hp&raw=1', title:'Spy × Family T3 Cap 1' },
           "2": { link: 'https://drive.google.com/file/d/1nMBZYAKch3txGYa7ZR-E9PXH3HJGV7Qe/preview', link2: 'https://www.dropbox.com/scl/fi/5i7p21ni7u1b0ci58lknt/Spy-Family-T3-Cap-2.mp4?rlkey=rmp72zlu9gjgygtrqcazmtvii&st=8zs1qtyj&raw=1', title:'Spy × Family T3 Cap 2' },
           "3": { link: 'https://drive.google.com/file/d/1pItUIDJOzv-2gn7pElJqqVAIHcHD6ECS/preview', link2: 'https://www.dropbox.com/scl/fi/tsjz7bz2jqyqtqm3o88dc/Spy-Family-T3-Cap-3.mp4?rlkey=fy225l9ubtcex5bhfi8gat0qk&st=43tua16k&raw=1', title:'Spy × Family T3 Cap 3' },
@@ -2478,6 +2478,22 @@
           "7": { link:'https://drive.google.com/file/d/1fbWAiIbXifd_EeWCq-hdxStTNLyGqSiF/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 7' },
         }
       },
+      "60": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1CatR182WKabtDm3HcBDkP7S5SH2w2fC4/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/12DG3cou1GHK7CTy6MIQvFJ0NCXgQ6OFE/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1NNUPy9hjoVe0b9bZ4Zd5QEQnygVEzTCH/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1GbhxT_ug4rX2NujQWpaRvPIxDecxAcsP/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1FZhIa1diZlUDgdDsnTJkMHThwGFpPyE0/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1VfmrjDVMxjjNfu-lLSuYg51F8a8W_m0D/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1RSdyLLSp9Nmxi_dfxzd2-LkxdYQsxKOF/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1Y0oJ1Me8rgweo3OaVWaoM-LJUFxhQrYO/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1__0eJzv7551bGYfkMIpMeyH-oCeYMAke/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/12Rrh0xj85a9WUXEZEARqliEsJfd4IW4Y/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1FDWj67l-uIUlXy92JDwREtgS4mF-iS2c/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 11' },
+        }
+      },
+
 
 
 
