--- a/anime-detail.html
+++ b/anime-detail.html
@@ -237,6 +237,7 @@
   <audio id="rym-ost" loop><source src="rym.mp3" type="audio/mpeg"></audio>
   <audio id="akujiki-ost" loop><source src="akujiki.mp3" type="audio/mpeg"></audio>
   <audio id="saigonihitotsu-ost" loop><source src="saigonihitotsu.mp3" type="audio/mpeg"></audio>
+  <audio id="syn-ost" loop><source src="syn.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3480,7 +3481,153 @@
           }
         ]
       },
-
+      61: {
+        title: "Ataque a los titanes",
+        desc: "Desde que 100 años atrás los titanes apareciesen de la nada y llevasen a la humanidad al borde de la extinción, la población vive encerrada en ciudades rodeadas de enormes muros llamados Maria, Rose y Sina, con el fin de protegerse de la aparición de nuevos titanes. Ese es el día a día de Eren Jaeger, un joven que sueña con el poder estar fuera de los muros, fastidiado del conformismo con el que la humanidad vive encerrada como si fuese ganado. La repentina llegada de los titanes Colosal y Acorazado aplastará la ilusión de paz en la que hasta ahora vivía la sociedad humana y hará que Eren, junto a su hermana adoptiva Mikasa Ackerman y su mejor amigo Armin Arlert, se embarque en una arriesgada odisea de venganza en nombre de la humanidad.",
+        cover: "synt.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "synt1.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+              { title: "Capítulo 16"},
+              { title: "Capítulo 17"},
+              { title: "Capítulo 18"},
+              { title: "Capítulo 19"},
+              { title: "Capítulo 20"},
+              { title: "Capítulo 21"},
+              { title: "Capítulo 22"},
+              { title: "Capítulo 23"},
+              { title: "Capítulo 24"},
+              { title: "Capítulo 25"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Ova 1",
+            cover: "synova1.jpg",
+            eps: [
+              { title: "OVA 1: El Diario de Ilse"},
+            ]
+          },
+          {
+            num: 3,
+	    name: "Ova 2",
+            cover: "synova2.jpg",
+            eps: [
+              { title: "OVA 2: Sin Arrepentimientos"},
+            ]
+          },
+          {
+            num: 4,
+	    name: "Temporada 2",
+            cover: "synt2.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+            ]
+          },
+          {
+            num: 5,
+	    name: "Ova 3",
+            cover: "synova3.jpg",
+            eps: [
+              { title: "OVA 3: Chicas Perdidas"},
+            ]
+          },
+          {
+            num: 6,
+	    name: "Temporada 3",
+            cover: "synt3.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+              { title: "Capítulo 16"},
+              { title: "Capítulo 17"},
+              { title: "Capítulo 18"},
+              { title: "Capítulo 19"},
+              { title: "Capítulo 20"},
+              { title: "Capítulo 21"},
+              { title: "Capítulo 22"},
+            ]
+          },
+          {
+            num: 7,
+	    name: "Temporada 4",
+            cover: "synt4.jpg",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+              { title: "Capítulo 14"},
+              { title: "Capítulo 15"},
+              { title: "Capítulo 16"},
+              { title: "Capítulo 17"},
+              { title: "Capítulo 18"},
+              { title: "Capítulo 19"},
+              { title: "Capítulo 20"},
+              { title: "Capítulo 21"},
+              { title: "Capítulo 22"},
+              { title: "Capítulo 23"},
+              { title: "Capítulo 24"},
+              { title: "Capítulo 25"},
+              { title: "Capítulo 26"},
+              { title: "Capítulo 27"},
+              { title: "Capítulo 28"},
+              { title: "Capítulo 29"},
+              { title: "Capítulo 30"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -3692,6 +3839,7 @@
         58: ['rym-ost'],
         59: ['akujiki-ost'],
         60: ['saigonihitotsu-ost'],
+        61: ['syn-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
