--- a/index.html
+++ b/index.html
@@ -285,6 +285,22 @@
         <option>Post-apocalíptico</option>
         <option>Psicológico</option>
         <option>Reverse Harem</option>
+        <option>Romance</option>
+        <option>Romance escolar</option>
+        <option>Slice of Life</option>
+        <option>Sobrenatural</option>
+        <option>Steampunk</option>
+        <option>Superhéroes</option>
+        <option>Survival Game</option>
+        <option>Tentáculos</option>
+        <option>Terror</option>
+        <option>Terror psicológico</option>
+        <option>Thriller</option>
+        <option>Thriller psicológico</option>
+        <option>Tokusatsu</option>
+        <option>Tragedia</option>
+        <option>Yaoi</option>
+        <option>Yuri</option>
       </select>
 
       <select id="demographic-select" onchange="filtro()" aria-label="Seleccionar demografía">
@@ -416,6 +432,7 @@
       {id:58, title:"Rick and Morty", aliases: ["Rick y Morty"], img:"rymp.jpg", rating:4.9, genres:["Animación","Acción","Ciencia ficción","Aventura","Comedia","Comedia oscura","Gag","Seijin"]},
       {id:59, title:"Akujiki Reijō to Kyōketsu Kōshaku", aliases: ["Pass the Monster Meat, Milady!"], img:"akujiki.jpg", rating:4.5, genres:["Fantasía","Comedia","Cocina","Romance","Shōjo"]},
       {id:60, title:"Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka", aliases: ["May I Ask for One Final Thing?"], img:"saigo ni hitotsu.jpg", rating:4.7, genres:["Acción","Fantasía","Comedia","Drama","Romance","Shōjo"]},
+      {id:61, title:"Ataque a los titanes", aliases: ["Attack on Titan","Shingeki no Kyojin"], img:"synt.jpg", rating:4.9, genres:["Acción","Fantasía oscura","Post-apocalíptico","Drama","Misterio","Aventura","Thriller","Shōnen"]},
     ];
 
     /* ----------------------------
