--- a/video-player.html
+++ b/video-player.html
@@ -2494,7 +2494,114 @@
           "11": { link:'https://drive.google.com/file/d/1FDWj67l-uIUlXy92JDwREtgS4mF-iS2c/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 11' },
         }
       },
-
+      "61": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1x-tMva8IPagCQV9fOlISZRmw1q8OvAOS/preview', title:'Ataque a los titanes T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1z7BjdCV_h1zar5DsFUo2F9AEL9xvzTZA/preview', title:'Ataque a los titanes T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1xt4y28bldDIPu4R2Pw36OyMy_KLcZftD/preview', title:'Ataque a los titanes T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1araSKt7hnVTXJ4r5jr9Y7qPsng5nciIq/preview', title:'Ataque a los titanes T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1zU62X0WXs-7mQiPjM6krn0rx4eBDza5q/preview', title:'Ataque a los titanes T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1ajD23EYlKz7TPBpwmjhcU6ynflosMYR7/preview', title:'Ataque a los titanes T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/19WiM7hwFYrpAsVWA-2p9_IjDFKa0vkh0/preview', title:'Ataque a los titanes T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1OxAKt1WiVhPgAReWF_5LVl8nMdhOBNsT/preview', title:'Ataque a los titanes T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1V1QjH4ALFxh5E-rSCHhtpIXdwCejE9Za/preview', title:'Ataque a los titanes T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1TExEId1WEGoHGISPrb6SFF5LEGTK-oIN/preview', title:'Ataque a los titanes T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1V3fQ6bzV4WEKQmAS3doUW1lDHG7A_TFg/preview', title:'Ataque a los titanes T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1qC_pwSKgMP5pBxpamJTuRQBVTMynJsqh/preview', title:'Ataque a los titanes T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1MAM603D1ExHbamZ977VaZabQQWGkdlYd/preview', title:'Ataque a los titanes T1 Cap 13' },
+          "14": { link:'https://drive.google.com/file/d/17aiJBMeTTjMyRYFcT6yHbGOcYxuJxxhX/preview', title:'Ataque a los titanes T1 Cap 14' },
+          "15": { link:'https://drive.google.com/file/d/1d2gl2vX1ch6sIJhUxAPOVLgQvtXwbqQ-/preview', title:'Ataque a los titanes T1 Cap 15' },
+          "16": { link:'https://drive.google.com/file/d/1Tf3AEL1cSgPkjX65Y8p7fzA4ykjPCgvn/preview', title:'Ataque a los titanes T1 Cap 16' },
+          "17": { link:'https://drive.google.com/file/d/1oapgufGRmQyk9omzvjV3LSg2JzLGz0QG/preview', title:'Ataque a los titanes T1 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/1NU2FqmdQCarbit7NGoGdVcr5pTRZyDiD/preview', title:'Ataque a los titanes T1 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1tUAAqVgSzVGQTZtpO6f_cepQ0w-EnwhA/preview', title:'Ataque a los titanes T1 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/1ahdY351pXCluHpU5dpe2vlF4gfwRQG01/preview', title:'Ataque a los titanes T1 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1ARaws2ohPoqCTxJGuItNtlwQOZ6W9tsA/preview', title:'Ataque a los titanes T1 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1sriMs6oPwZ2Q_LvHe3SgpRZ2s6W_Ivrf/preview', title:'Ataque a los titanes T1 Cap 22' },
+          "23": { link:'https://drive.google.com/file/d/1cUvTmwJWWcMMb3ZZCQlMjj6kl1Te7cq1/preview', title:'Ataque a los titanes T1 Cap 23' },
+          "24": { link:'https://drive.google.com/file/d/1VjpUul8OEaC0uWiE334F8CIiBNEkEmXA/preview', title:'Ataque a los titanes T1 Cap 24' },
+          "25": { link:'https://drive.google.com/file/d/12Hjq7yGQ435reizBTrBL26LQLu5d69rd/preview', title:'Ataque a los titanes T1 Cap 25' },
+        },
+        "2": {
+          "1": { link:'/preview', title:'Ataque a los titanes OVA 1: El Diario de Ilse' },
+        },
+        "3": {
+          "1": { link:'/preview', title:'Ataque a los titanes OVA 2: Sin Arrepentimientos' },
+        },
+        "4": {
+          "1": { link:'https://drive.google.com/file/d/1enG3tjnC1meuN5QlPEHfsKX7Le_F_wJ9/preview', title:'Ataque a los titanes T2 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1hMZa0BArAHtjwDPMeRmNdCUQ3l1aElSF/preview', title:'Ataque a los titanes T2 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1OV_k4XaE-F-CW-OwCCOGpkFpaF12bB8E/preview', title:'Ataque a los titanes T2 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1tg8ioLS2LLfw4axzn5Bxpe7h_MWUowOx/preview', title:'Ataque a los titanes T2 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1_nqEhfVe0sqsydTA97pLRx5P0di317UJ/preview', title:'Ataque a los titanes T2 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1ICktyJ79exxRL83X8v1suOcKQ4_ZV8fe/preview', title:'Ataque a los titanes T2 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1stPSEWV_jDaOoH-aaJFl31sjnoywG5iY/preview', title:'Ataque a los titanes T2 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1nPxcbDklsMBiWxRq5HS4txfpfQNzTPZO/preview', title:'Ataque a los titanes T2 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/175T4sPo7z8khMmEh3nkEYuaewhSytc6i/preview', title:'Ataque a los titanes T2 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/10AFVWJmF_wu1RuzpetleYVisHeecC6Ib/preview', title:'Ataque a los titanes T2 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1cick9lHzI8Z0oZsixfadoWZcI1SAP5E-/preview', title:'Ataque a los titanes T2 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1cif0J5y9Z4NUUPsKAuiSn08zetyjyqBA/preview', title:'Ataque a los titanes T2 Cap 12' },
+        },
+        "5": {
+          "1": { link:'/preview', title:'Ataque a los titanes OVA 3: Chicas Perdidas' },
+        },
+        "6": {
+          "1": { link:'https://drive.google.com/file/d/1VrB3QXkMogEIyr5oPAeMZRgH_o9XBo41/preview', title:'Ataque a los titanes T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/14vEnS_TuS-oa8o2kwvVV8y3nJYzrqrrf/preview', title:'Ataque a los titanes T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1qYifdvQ8IMnI5uZytUHW3hmf5jJwdPF8/preview', title:'Ataque a los titanes T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1mku8IXFDuME6ozjuwR9r3GyN8HTOGYVv/preview', title:'Ataque a los titanes T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1sSkQA17-0jQzvRCoDHK3GqY3n6MXv1Zl/preview', title:'Ataque a los titanes T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1Rk6jTzuVqDDcEvTGVzweA9_WjdY9BbIV/preview', title:'Ataque a los titanes T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1LcGsG8VELrzgd0fCl_YA9MdiyMkkLJ-G/preview', title:'Ataque a los titanes T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1jpWgrQU2m3ywaWM0ZZhSKjnizTrjZOTR/preview', title:'Ataque a los titanes T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1c6kYj8mBV7YanoH_isPLGLuRiOwkIU_N/preview', title:'Ataque a los titanes T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/13SJ1S3iJMdVB03Tpgk6EzCaWn9UI-KFe/preview', title:'Ataque a los titanes T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1ZfqlNGzipFANJ_NH-IAMMrgxa8962bEA/preview', title:'Ataque a los titanes T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1UKpPZKJWpG_1ol8ZD4aQg9WgVduyebWR/preview', title:'Ataque a los titanes T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1MPMnGdd8JJVfIY5ddBjYWun3o74ERLag/preview', title:'Ataque a los titanes T1 Cap 13' },
+          "14": { link:'https://drive.google.com/file/d/1gTr6UhSmoB9D8XCSR9cZWMVvVujmlNjl/preview', title:'Ataque a los titanes T1 Cap 14' },
+          "15": { link:'https://drive.google.com/file/d/185dXatdSrl-DSX0sok1zFfPm2m1XhhyT/preview', title:'Ataque a los titanes T1 Cap 15' },
+          "16": { link:'https://drive.google.com/file/d/1Uk5q2aY-DHeBfNJ6XRJ_UeJAJLxrnAXK/preview', title:'Ataque a los titanes T1 Cap 16' },
+          "17": { link:'https://drive.google.com/file/d/1CLVayaAhlrKw9dA57xzpI1u5FFQOI6uP/preview', title:'Ataque a los titanes T1 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/1rUSeYv_MMnDy_FObI04IGziNuoilldcm/preview', title:'Ataque a los titanes T1 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1Avw1Gwo4d38UcuXNBWxs-x6o9hdTIFVj/preview', title:'Ataque a los titanes T1 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/14QaWZ-HFewPAYBIvr-pVBr9gkCT6T1O9/preview', title:'Ataque a los titanes T1 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1x7S0hsD1FElBHe7qomxj7X7uf1Cfj6qG/preview', title:'Ataque a los titanes T1 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1twaKDmKjYN1dOOcgSXRUNObhZove0lJ7/preview', title:'Ataque a los titanes T1 Cap 22' },
+        },
+        "7": {
+          "1": { link:'/preview', title:'Ataque a los titanes T1 Cap 1' },
+          "2": { link:'/preview', title:'Ataque a los titanes T1 Cap 2' },
+          "3": { link:'/preview', title:'Ataque a los titanes T1 Cap 3' },
+          "4": { link:'/preview', title:'Ataque a los titanes T1 Cap 4' },
+          "5": { link:'/preview', title:'Ataque a los titanes T1 Cap 5' },
+          "6": { link:'/preview', title:'Ataque a los titanes T1 Cap 6' },
+          "7": { link:'/preview', title:'Ataque a los titanes T1 Cap 7' },
+          "8": { link:'/preview', title:'Ataque a los titanes T1 Cap 8' },
+          "9": { link:'/preview', title:'Ataque a los titanes T1 Cap 9' },
+          "10": { link:'/preview', title:'Ataque a los titanes T1 Cap 10' },
+          "11": { link:'/preview', title:'Ataque a los titanes T1 Cap 11' },
+          "12": { link:'/preview', title:'Ataque a los titanes T1 Cap 12' },
+          "13": { link:'/preview', title:'Ataque a los titanes T1 Cap 13' },
+          "14": { link:'/preview', title:'Ataque a los titanes T1 Cap 14' },
+          "15": { link:'/preview', title:'Ataque a los titanes T1 Cap 15' },
+          "16": { link:'/preview', title:'Ataque a los titanes T1 Cap 16' },
+          "17": { link:'/preview', title:'Ataque a los titanes T1 Cap 17' },
+          "18": { link:'/preview', title:'Ataque a los titanes T1 Cap 18' },
+          "19": { link:'/preview', title:'Ataque a los titanes T1 Cap 19' },
+          "20": { link:'/preview', title:'Ataque a los titanes T1 Cap 20' },
+          "21": { link:'/preview', title:'Ataque a los titanes T1 Cap 21' },
+          "22": { link:'/preview', title:'Ataque a los titanes T1 Cap 22' },
+          "23": { link:'/preview', title:'Ataque a los titanes T1 Cap 23' },
+          "24": { link:'/preview', title:'Ataque a los titanes T1 Cap 24' },
+          "25": { link:'/preview', title:'Ataque a los titanes T1 Cap 25' },
+          "26": { link:'/preview', title:'Ataque a los titanes T1 Cap 26' },
+          "27": { link:'/preview', title:'Ataque a los titanes T1 Cap 27' },
+          "28": { link:'/preview', title:'Ataque a los titanes T1 Cap 28' },
+          "29": { link:'/preview', title:'Ataque a los titanes T1 Cap 29' },
+          "30": { link:'/preview', title:'Ataque a los titanes T1 Cap 30' },
+        }
+      },
 
 
 
